# 202103988_EDD_Practica

./: README.md  Untitled1.ipynb
Practica_EDD_202103988/: CMakeLists.txt  aviones.json  main.cpp  movimientos.txt  pasajeros.json
Practica_EDD_202103988/Listas/: Avion.h  Cola.h  Equipaje.h  ListaDoble.h  ListaDobleCircular.h  Nodo_atendidos.h  Nodo_avion.h  Nodo_equipaje.h  Nodo_pasajero.h  Pasajero.h  Pila.h
